--- a/dmenu.1
+++ b/dmenu.1
@@ -58,6 +58,24 @@ dmenu lists items in a grid with the given number of columns.
 .BI \-l " lines"
 dmenu lists items in a grid with the given number of lines.
 .TP
+.BI \-x " xoffset"
+dmenu is placed at this offset measured from the left side of the monitor.
+Can be negative.
+If option
+.B \-m
+is present, the measurement will use the given monitor.
+.TP
+.BI \-y " yoffset"
+dmenu is placed at this offset measured from the top of the monitor.  If the
+.B \-b
+option is used, the offset is measured from the bottom.  Can be negative.
+If option
+.B \-m
+is present, the measurement will use the given monitor.
+.TP
+.BI \-wd " width"
+sets the width of the dmenu window.
+.TP
 .BI \-h " height"
 dmenu uses a menu line of at least 'height' pixels tall, but no less than 8.
 .TP
