Patched prefix completion flag

--- a/dmenu.1
+++ b/dmenu.1
@@ -3,7 +3,7 @@
 dmenu \- dynamic menu
 .SH SYNOPSIS
 .B dmenu
-.RB [ \-bfinv ]
+.RB [ \-bfinuv ]
 .RB [ \-g
 .IR columns ]
 .RB [ \-l
@@ -109,6 +109,9 @@ defines the selected foreground color.
 .TP
 .B \-v
 prints version information to stdout, then exits.
+.TP
+.B \-u
+Invert prefix matching setting.
 .TP
 .BI \-w " windowid"
 embed into windowid.
